--- a/app/templates/partials/nav_offcanvas.html
+++ b/app/templates/partials/nav_offcanvas.html
@@ -1,9 +1,8 @@
-<!-- <div class="nav-container">
+<div class="nav-container">
 	<nav class="absolute transparent">
 		<div class="nav-bar">
 			<div class="module left">
 				<a href="index.html">
-					
 					Keralock
 				</a>
 			</div>
@@ -51,4 +50,4 @@
 		</div>
 	</nav>
 
-</div> -->
+</div>
