--- a/app/styles/components/_theme_less2sass.scss
+++ b/app/styles/components/_theme_less2sass.scss
@@ -60,6 +60,7 @@ $gray: #444;
 $color-primary: $gray;
 $bg-secondary: #f8f8f8;
 $bg-dark: #292929;
+$bg-white: white;
 
 
 
@@ -391,7 +392,11 @@ nav ul{ margin-bottom: 0; }
 nav .btn, .nav-bar .btn{ margin: 0; height: auto; }
 .nav-utility{ height: 45px; line-height: 43px; border-bottom: 1px solid #ccc; overflow: hidden; }
 .nav-utility i{ position: relative; top: 1px; }
-.nav-bar{ height: $nav-height; max-height: $nav-height; line-height: $nav-line-height; border-bottom: 1px solid #ccc; }
+.nav-bar{ 
+	height: $nav-height; max-height: $nav-height; line-height: $nav-line-height; border-bottom: 1px solid #ccc; 
+	transform: translateZ(0);
+	will-change: transform;
+}
 .nav-bar .module,.nav-bar .module-group{ height: $nav-height; }
 .nav-bar a{ display: inline-block; height: $nav-height; }
 // .logo{ max-height: 70%; }
