--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,12 +14,15 @@
 
 @import 'components/menu-wrapper';
 @import 'components/logo';
+@import 'components/home';
+@import 'components/home_nav';
 
 
 
-.temp .fs-vid-background,
-.temp .bg-dark .background-image-holder {
-    -webkit-filter: blur(40px);
-}
+
+// .temp .fs-vid-background,
+// .temp .bg-dark .background-image-holder {
+//     -webkit-filter: blur(40px);
+// }
 
 
