--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,10 +12,18 @@
 /*@import 'font-oswald';*/
 
 
+
+
+/*
+ * custom css
+ */
+@import 'base/mixins';
 @import 'components/menu-wrapper';
 @import 'components/logo';
 @import 'components/home';
 @import 'components/home_nav';
+
+@import 'components/backgrounds';
 
 
 
