--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,7 +23,8 @@
 @import 'components/home';
 @import 'components/home_nav';
 
-@import 'components/backgrounds';
+@import 'components/images';
+@import 'components/mailchimp';
 
 
 
