--- a/app/styles/components/home.scss
+++ b/app/styles/components/home.scss
@@ -22,6 +22,7 @@
 		background-color: black;
 	    img {
 	    	position: absolute;
+	    	min-width: 100%;
 	    	&.bg1 {
 
 	    	}
@@ -78,23 +79,10 @@
  * fs-vid-background
  */
 .fs-vid-background {
+	@media all and (max-width: 990px) {
+		display: none;
+	}
 	video {
-		
-		// &.ratio_width,
-		// &.ratio_height {
-		// 	min-width: 100%;
-		//     min-height: 100%;
-		//     width: auto;
-		//     height: auto;
-
-		// 	position: absolute;
-		// 	top: 50%;
-		// 	left: 50%;
-
-
-		// 	transform: translate(-50%,-50%); 
-		// }
-
 		min-width: 100%;
 	    min-height: 100%;
 	    width: auto;
@@ -106,18 +94,15 @@
 
 
 		transform: translate(-50%,-50%); 
+	}
 
+	+ .background-image-holder {
 		
-		background: url(/assets/img/home15.jpg) no-repeat center center fixed;;
-		background-size: cover;
-	    // &.ratio_width {
-	    // 	width: 100%;
-	    // 	height: auto;
-	    // }
-	    // &.ratio_height {
-	    // 	width: auto;
-	    // 	height: 100%; 
-	    // }
+		@media all and (max-width: 990px) {
+
+			background: url(/assets/img/home15.jpg);
+		}
+		background: none;
 	}
 
 
@@ -126,9 +111,7 @@
 }
 
 
-@media all and (max-width: 990px) {
-	.fs-vid-background{ display: none; }
-}
+
 
 
 
