--- a/app/styles/components/images.scss
+++ b/app/styles/components/images.scss
@@ -1,10 +1,12 @@
 
 
 .background-image-holder.srcset {
-
-	.parallax>& img{
+	
+	// .-small & img,
+	.parallax>& img	{
 		max-width: inherit;
 	}
+	
 	img {
 		//  reset
 		display: block;	
