--- a/app/styles/components/images.scss
+++ b/app/styles/components/images.scss
@@ -22,6 +22,15 @@
 		height: auto;
 		z-index: -1;                       // Put on background
 		overflow: hidden;
+
+		.-small & {
+			top: initial;
+			bottom: 0;
+			left: 0;
+			
+			
+			transform: none;
+		}
 	}
 	
 
