--- a/app/styles/components/logo.scss
+++ b/app/styles/components/logo.scss
@@ -62,7 +62,7 @@ footer {
 		position: relative;
 		top: -20px;
 		width: 100px;
-		height: auto;
+		height: 45px;
 	}
 	@media (max-width: 768px) {
 		.row > * {
