--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,8 @@ $breakpointTablet : 990px;
 @import 'components/images';
 @import 'components/mailchimp';
 
+@import 'components/image-square';
+
 
 
 
