--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,4 @@
-$breakpointTablet : 990px;
+$breakpointTablet : 991px;
 
 @import 'base/bootstrap';
 
@@ -28,6 +28,8 @@ $breakpointTablet : 990px;
 @import 'components/mailchimp';
 
 @import 'components/image-square';
+@import 'components/atom';
+
 
 
 
